# ORCA

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  orcaconf.example.toml
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: logging.rs  main.rs
bot/src/commands/: dossier.rs  mod.rs
config/: Cargo.toml
config/src/: lib.rs
db/entities/: Cargo.toml
db/entities/src/: lib.rs  mod.rs  orcasite_account.rs  prelude.rs  s3_profile.rs  xbattle_stats.rs
db/migrations/: Cargo.toml
db/migrations/src/: lib.rs  m20221203_181039_create_table_s3profile.rs  m20221207_224215_create_table_xbattle_stats.rs  m20230829_065706_orcasite_account.rs
logging/: Cargo.toml
logging/src/: lib.rs
src/: config.rs  logging.rs  main.rs
src/commands/: dossier.rs  mod.rs  system.rs
web/backend/: Cargo.toml
web/backend/src/: main.rs
web/backend/src/routes/: auth.rs  mod.rs
web/frontend/: .prettierrc  index.html  package.json
web/frontend/src/: App.svelte  app.css
web/frontend/src/cls/: user.ts
web/frontend/src/components/: Login.svelte  Signup.svelte
web/frontend/src/components/pages/: Index.svelte  Login.svelte  Signup.svelte
web/frontend/src/util/: SwapTextButton.svelte  SwapTextLink.svelte
web/frontend/src/util/store/: current_user.ts
webserver/: Cargo.toml
webserver/frontend/: index.html  package.json  rollup.config.js  vite.config.ts
webserver/frontend/public/: index.html
webserver/frontend/src/: App.svelte
webserver/frontend/src/components/: Login.svelte  PlayerProfile.svelte
webserver/src/: main.rs
webserver/src/api/: mod.rs  profile.rs
