[package]
name = "orca"
version = "0.1.1"
edition = "2021"

[workspace]
members = [ ".", "db/migrations", "db/entities" ]

[dependencies]
migration = { path = "db/migrations" }
entity = { path = "db/entities" }
poise = "0.5"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
toml = "0.5"
anyhow = "1.0"
rustc_version_runtime = "0.2"
sysinfo = "0.26"

[dependencies.sea-orm]
version = "0.10"
features = [ "sqlx-mysql", "runtime-tokio-rustls" ]

[dependencies.sea-orm-migration]
version = "0.10"
features = [ "sqlx-mysql", "runtime-tokio-rustls" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.tokio]
version = "1.22"
features = [ "rt-multi-thread", "macros" ]

[dependencies.tracing]
version = "0.1"
features = [ "max_level_trace", "release_max_level_info" ]
