[package]
name = "orca_logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing-appender = "0.2"
orca_config = { path = "../config" }

[dependencies.tracing]
version = "0.1"
features = [ "release_max_level_trace", "max_level_trace" ]
