[package]
name = "orca_logging"
version = "0.1.0"
edition = "2021"

[features]
bot = []
server = []

[dependencies]
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-log = "0.1"
orca_config = { path = "../config" }

[dependencies.tracing]
version = "0.1"
features = [ "release_max_level_trace", "max_level_trace" ]
